updating our details

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am studying software developement. This is my first webpage.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Brazil. I moved to the USA when I was 2 years old.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
