finishing up details git commit -m

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>I was born in Brazil. I moved to the USA when I was 2 years old.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cycling, esports, and wine tasting</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer at a big tech company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bay Area California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding can be a creative outlet for someone like me who wants to work a job whilst also being able to build something awesome from scratch.</p>
     </section>
 
     <footer id="footer">
