--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>Software Developer at a big tech company.</p>
       <h1>Where do you live?</h1>
-      <p>Bay Area California</p>
+      <p>Bay Area, California</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Coding can be a creative outlet for someone like me who wants to work a job whilst also being able to build something awesome from scratch.</p>
     </section>
